# Machine-learning

./: .gitignor  .gitignore  .pre-commit-config.yaml  .tmux.conf  READMY.md  celluloid_size.bash  chapter_1.py  chapter_4.py  chapter_5.py  chapter_6.py  experiment.py  i.txt  init.vim  pyproject.toml  rifle.conf  setup.cfg  vlc_size.bash
basic_python/: base_function.js  base_functions.py  bfs.py  degree.py  deykstra.py  dfs.py  dynamic.py  heap.py  nod_and_Eratosfen.py  p_1.py  queue.py  stack.py
designPatterns/behavior/: chain.py  command.py  iterator.py  mediator.py  observer.py  state.py  strategy.py  template_method.py  visitor.py
designPatterns/generating/: abstract_factory.py  builder.py  factory_method.py  singleton.py
designPatterns/structural/: adapter.py  bridge.py  composite.py  decorator.py  facade.py  proxy.py
designPatterns/structure/: decorator.py
dlForKettle/: 10.py  15.py  2.py  5.py  exp_dbm.py  markov.py
dlWitoutMath/: 15_clustering.py  15_transformation.py  chapter-15.py  gradient.py  test.py
kitty/: current-theme.conf  kitty.conf
lazygit/: config.yml
linear-algebra/: matrix.py
matplotlib/: 1.py  2.py  3.py  3_color.py  4.py  4_bar.py  4_pie.py
matplotlib/pyprog/: 4.py  5.1.py  5.10.py  5.6.py  5.9.py  6.1.py  6.3.py  6.4.py  6.5.py  6.6.py  6.8.py
matplotlib_study/: 1.py  2.py  3.py  3_color.py  4.py  4_bar.py  4_pie.py
matplotlib_study/pyprog/: 4.py  5.1.py  5.10.py  5.2.py  5.3.py  5.4.py  5.5.py  5.6.py  5.7.py  5.8.py  5.9.py  5.py  6.1.py  6.3.py  6.4.py  6.5.py  6.6.py  6.7.py  6.8.py
md_start/: my.md
ml_algorithm/: f_score.py  kNN.py  kmeans.py  naive_bayes.py  random_forest.py  regression.py  ridge.py  softmax_regression.py
my-bash/: .dircolors
notes/: useful-links.md  Как вернуть поиск Яндекс в Firefox.md  Настройка Latex.md  Настройка Obsidian.md  Настройка Tmux.md  Настройка fish shell.md  Программы для создания скриншотов..md  Просмотр приложений установленных через flatpak.md  Раскрашиваем цвета вывода ls.md  Смена единиц измерения в libreoffice.md
notes/environmental/: Настройка Poetry.md  Окружение JupyterLab.md  Установка pyenv.md
notes/git/: Настройка nvim как редактор для lazygit.md  Отображение кириллических имен в git status.md  Сравнение 5 команд Git revert, checkout, reset, merge и rebase.md
notes/linux/: 50 практических примеров использования команды SED в Linux.md  apt.md  cli_commands.md  find.md  Настройка TigerVNC.md  Настройка терминала Kitty.md  Скачиваем сайты целиком — утилита wget.md  Управление версиями Node.js и NPM с помощью NVM.md  базовая настройка qemu.md
notes/linux/awk/: Полное руководство по утилите AWK.md
notes/linux/rsync/: Примеры_синхронизации_Rsync.md  возможности_Rsync.md
notes/lua/: Установка lua в linux.md
notes/obsidian/: Настройка Obsidian.md  Проверка орфографии в obsidian.md
notes/other/: Как вернуть поиск Яндекс в Firefox.md  Смена единиц измерения в libreoffice.md
notes/ranger/: Настройка Ranger.md  Проблема с чтением djvu в ranger.md
notes/templates/: problem.template.md
notes/vim/: global command.md  regexp.md  search and substitute.md  substiture.md  Действия необходимые до настройки nvim.md  Добавление шрифтов для vim.md  Настройка neovim.md  Настройка алиаса для neovim.md  Скачиваем собранный neovim (AppImage).md
numPy/: 1.py  np_1.py
numpy_study/: np_1.py
pandas/: 1.ipynb  chapter_3.ipynb  chapter_4.ipynb  chapter_5.ipynb  chapter_6.ipynb  chapter_7.ipynb  chapter_8.ipynb  chapter_9.ipynb  lecture4.ipynb
pandas_study/: appendix_1.ipynb  appendix_2.ipynb  appendix_3.ipynb  appendix_4.ipynb  chapter_10.ipynb  chapter_11.ipynb  chapter_12.ipynb  chapter_13.ipynb  chapter_14.ipynb  chapter_3.ipynb  chapter_4.ipynb  chapter_5.ipynb  chapter_6.ipynb  chapter_7.ipynb  chapter_8.ipynb  chapter_9.ipynb
practice/: derivative.py  linearRegression.py
probability/2/: v_2.ipynb
probability/3/: 3.ipynb
rg/: .ripgreprc  readme.md
sioyek/: keys_user.config  prefs_user.config  readme.md
tile_manager/: main
tile_manager/bspwm/: how_install
tile_manager/polybar/: config.ini  launch.sh  readme
tile_manager/sxhkd/: readme  sxhkdrc
yazi/: keymap.toml  package.toml  yazi.toml
zsh/: .zshrc
(+18 files in other folders)
