[tool.poetry]
name = "poetry_temp"
version = "0.1.0"
description = ""
authors = ["chernov.ig <che_test@test>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^2.0"
pandas = "^2.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
ipykernel = "^6.13.0"
seaborn = "^0.12.0"
sympy = "^1.11.1"
simpy = "^4.1.1"
openpyxl = "^3.1.5"

[tool.black]
line-length = 100
extend-exclude = '''
(
  .vscode
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
skip_gitignore = true

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.1"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
flake8-bugbear = "^24.4.26"
jupyterlab = "^4.2.3"
ipykernel = "^6.29.5"
flake8-commas = "^4.0.0"
flake8-builtins = "^2.5.0"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"
flake8-functions = "^0.0.8"
flake8-class-attributes-order = "^0.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-cognitive-complexity = "^0.1.0"
flake8-annotations = "^3.1.1"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
