[project]
name = "ml_project"
version = "0.1.0"
description = ""
authors = [{ name = "chernov.ig", email = "che_test@test" }]
requires-python = ">=3.10"
dependencies = [
    "pandas~=2.2",
    "matplotlib>=3.5.1,<4",
    "scikit-learn>=1.0.2,<2",
    "scipy>=1.8.0,<2",
    "ipykernel>=6.13.0,<7",
    "seaborn>=0.12.0,<0.13",
    "sympy>=1.11.1,<2",
    "simpy>=4.1.1,<5",
    "openpyxl>=3.1.5,<4",
    "xlwt>=1.3.0,<2",
    "lxml>=5.2.2,<6",
    "html5lib~=1.1",
    "beautifulsoup4>=4.12.3,<5",
    "tables>=3.9.2,<4",
    "h5py>=3.11.0,<4",
    "numpy>=2.1",
    "pandas-datareader>=0.10.0,<0.11",
]

[dependency-groups]
dev = [
    "pytest~=5.2",
    "flake8>=7.1.0,<8",
    "mypy>=1.10.1,<2",
    "black>=24.4.2,<25",
    "isort>=5.13.2,<6",
    "pre-commit>=3.7.1,<4",
    "flake8-bugbear>=24.4.26,<25",
    "jupyterlab>=4.2.3,<5",
    "ipykernel>=6.29.5,<7",
    "flake8-commas>=4.0.0,<5",
    "flake8-builtins>=2.5.0,<3",
    "flake8-variables-names>=0.0.6,<0.0.7",
    "flake8-import-order>=0.18.2,<0.19",
    "flake8-functions>=0.0.8,<0.0.9",
    "flake8-class-attributes-order>=0.1.3,<0.2",
    "flake8-expression-complexity>=0.0.11,<0.0.12",
    "flake8-cognitive-complexity>=0.1.0,<0.2",
    "flake8-annotations>=3.1.1,<4",
    "flake8-docstrings>=1.7.0,<2",
    # необходим для корректной работы matplotlib в visualstudio
    # под uv (менеджер пакетов для python)
    "pyqt5>=5.15.11",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
extend-exclude = '''
(
  .vscode
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
skip_gitignore = true
