[project]
name = "ml_project"
version = "0.1.0"
description = ""
authors = [{ name = "chernov.ig", email = "che_test@test" }]
requires-python = ">=3.13"
dependencies = [
    "pandas>=3",
    "matplotlib>=3.10,<4",
    "pillow>=12",
    "scikit-learn>=1.8,<2",
    "scipy>=1.17,<2",
    "seaborn>=0.13",
    "sympy>=1.11.1,<2",
    "simpy>=4.1.1,<5",
    "openpyxl>=3.1.5,<4",
    "xlwt>=1.3.0,<2",
    "lxml>=5.2.2,<6",
    "beautifulsoup4>=4.12.3,<5",
    "numpy>=2.4",
    "pandas-datareader>=0.10.0,<0.11",
    "category-encoders>=2.8.1",
]

[dependency-groups]
dev = [
    "pytest>5.2",
    "mypy>=1.10.1,<2",
    "black>=24.4.2,<25",
    "isort>=5.13.2,<6",
    "pre-commit>=3.7.1,<4",
    "jupyterlab>=4.5,<5",
    "ipykernel>=6.29.5,<7",
    # необходим для корректной работы matplotlib в visualstudio
    # под uv (менеджер пакетов для python)
    "pyqt5>=5.15.11",
    "jupytext>=1.19.3",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
extend-exclude = '''
(
  .vscode
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
skip_gitignore = true
